[gd_scene load_steps=7 format=3 uid="uid://bgdwvqgcy8uio"]

[ext_resource type="Script" path="res://doctor_dialogue.gd" id="1_m4ebl"]
[ext_resource type="Texture2D" uid="uid://ehns1mt74tji" path="res://assets/Visual Novel/Exports/Dialogue/black_dialogue_container.png" id="2_35lp1"]
[ext_resource type="Texture2D" uid="uid://difhqklmbir06" path="res://assets/Visual Novel/Exports/NextBtnPressed.png" id="3_sl6r6"]

[sub_resource type="Animation" id="Animation_hqcwg"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(690, 196), Vector2(690, 210)]
}

[sub_resource type="Animation" id="Animation_8o4hs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(758, 196)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fgifk"]
_data = {
"Idle": SubResource("Animation_hqcwg"),
"RESET": SubResource("Animation_8o4hs")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="dialogue_box" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -343.0
offset_right = 415.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_m4ebl")

[node name="TextureRect" type="TextureRect" parent="dialogue_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35lp1")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="text" type="RichTextLabel" parent="dialogue_box"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Hello, this is the placeholder dialogue that does nothing. But I have to write enought to wrap the text around the box  to make sure it works. "
metadata/_edit_lock_ = true

[node name="NextBtnPressed" type="Sprite2D" parent="dialogue_box"]
position = Vector2(758, 196)
scale = Vector2(0.709302, 0.709302)
texture = ExtResource("3_sl6r6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialogue_box/NextBtnPressed"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_fgifk")
}

[node name="yes" type="Button" parent="dialogue_box"]
layout_mode = 0
offset_left = 139.0
offset_top = 127.0
offset_right = 349.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 25
text = "YES"

[node name="no" type="Button" parent="dialogue_box"]
layout_mode = 0
offset_left = 464.0
offset_top = 127.0
offset_right = 673.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 25
text = "NO"

[connection signal="pressed" from="dialogue_box/yes" to="dialogue_box" method="_on_yes_pressed"]
[connection signal="pressed" from="dialogue_box/no" to="dialogue_box" method="_on_no_pressed"]
